--- a/Gallery.html
+++ b/Gallery.html
@@ -135,16 +135,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Pongal pandigai/img 10.jpg" alt="">
-                                <a href="assets/images/Events/Pongal pandigai/img 10.jpg" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/Pongal pandigai/img 8.jpg" alt="">
-                                <a href="assets/images/Events/Pongal pandigai/img 8.jpg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Smash 2.0/img 4.jpg" alt="">
+                                <a href="assets/images/Events/Smash 2.0/img 4.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -159,40 +151,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Akshayapatra3.0/8.jpg" alt="">
-                                <a href="assets/images/Events/Akshayapatra3.0/8.jpg" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/Akshayapatra3.0/2.jpg" alt="">
-                                <a href="assets/images/Events/Akshayapatra3.0/2.jpg" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/Instolutions 2.0/18.jpeg" alt="">
-                                <a href="assets/images/Events/Instolutions 2.0/18.jpeg" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
                                 <img src="assets/images/Events/Instolutions 2.0/5.jpeg" alt="">
                                 <a href="assets/images/Events/Instolutions 2.0/5.jpeg" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/lumos/8.jpg" alt="">
-                                <a href="assets/images/Events/lumos/8.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -207,8 +167,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/lumos/2.jpg" alt="">
-                                <a href="assets/images/Events/lumos/2.jpg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Pongal pandigai/img 10.jpg" alt="">
+                                <a href="assets/images/Events/Pongal pandigai/img 10.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -223,8 +183,80 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Smash 2.0/img 8.jpeg" alt="">
+                                <a href="assets/images/Events/Smash 2.0/img 8.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Akshayapatra3.0/2.jpg" alt="">
+                                <a href="assets/images/Events/Akshayapatra3.0/2.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/lumos/8.jpg" alt="">
+                                <a href="assets/images/Events/lumos/8.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Pongal pandigai/img 8.jpg" alt="">
+                                <a href="assets/images/Events/Pongal pandigai/img 8.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Instolutions 2.0/18.jpeg" alt="">
+                                <a href="assets/images/Events/Instolutions 2.0/18.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Smash 2.0/img 10.png" alt="">
+                                <a href="assets/images/Events/Smash 2.0/img 10.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/lumos/2.jpg" alt="">
+                                <a href="assets/images/Events/lumos/2.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Yuvaneta23/9.jpeg" alt="">
                                 <a href="assets/images/Events/Yuvaneta23/9.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Pongal pandigai/img 14.jpg" alt="">
+                                <a href="assets/images/Events/Pongal pandigai/img 14.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Akshayapatra3.0/8.jpg" alt="">
+                                <a href="assets/images/Events/Akshayapatra3.0/8.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
