--- a/team.html
+++ b/team.html
@@ -467,7 +467,7 @@
                             </div>
                             <div class="text text-center">
                                 
-                                <h4><a><br>Mridhula B</a></h4>
+                                <h4><a><br>Mirdhula B</a></h4>
                                 <p class="position">Communications Head</p>
                             </div>
                         </div>
