--- a/index.html
+++ b/index.html
@@ -174,22 +174,22 @@
         <section class="about-area about-area-v1 position-relative pt-130">
             <div  class="container">
                 <div class="row justify-content-center">
-                    <div style="display:grid;place-items:center;" class="col-lg-6 col-xl-6">
-                    <!--<div class=" col-lg-6 col-xl-6">
+                    <div class=" col-lg-6 col-xl-6">
                         <div class="img-holder video-container wow fadeInLeft">
                             <div style="border-radius: 90px; overflow: hidden;">
                                 <video autoplay loop muted>
-                                    <source src="assets\images\about/vdo.mp4" type="video/mp4">
+                                    <source src="assets/images/about/vdo.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
-                       <!----</div>-->
+
+                       <!--</div>
                         <div class="img-holder-box mb-50">
                             <div class=" wow fadeInLeft">
                                 <img style="border-radius:5%" src="assets/images/about/about-1.png" alt="Image">
                             </div>
                             
-                        </div>
+                        </div>-->
                     </div>
                     <div class="col-lg-6 col-xl-6">
                         <div class="text-wrapper mb-50 wow fadeInRight">
