--- a/podcast.html
+++ b/podcast.html
@@ -133,50 +133,22 @@
         <!--====== Start Portfolio Section ======-->
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="section-title mb-45 wow fadeInUp">
-                            <span class="sub-title st-one">Our Works</span>
-                            <h2>Prior Initiatives</h2>
-                            <p>Creating Greater Impacts for a Better Tomorrow</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="portfolio-filter-button mb-50 wow fadeInLeft">
-                            <ul class="filter-btn mb-20">
-                                <li data-filter="*" class="active">Show All</li>
-                                <li data-filter=".cat-1">Entrepreneurship & Innovation</li>
-                                <li data-filter=".cat-2">Masoom</li>
-                                <li data-filter=".cat-3">Road Safety</li>
-                                <li data-filter=".cat-4">Rural Initiative</li>
-                                <li data-filter=".cat-5">Health</li>
-                                <li data-filter=".cat-6">Climate Change</li> 
-                                <li data-filter=".cat-7">Arts & Culture</li>
-                                <li data-filter=".cat-8">Accessibility</li>
-                                <li data-filter=".cat-9">Membership Engagement</li>
-                                <li data-filter=".cat-10">Projects</li>
-                                <li data-filter=".cat-11">Sports</li>
-                                <li data-filter=".cat-12">Others</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
                 <div class="row portfolio-grid">
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/10.jpg" alt="Img">
-                                <a href="Event - Smash 2.0.html" class="portfolio-hover">
+                                
+                                <a href="https://open.spotify.com/embed/episode/1ZvhjzQU8Js6DPBSiNOmY6?utm_source=generator&t=0" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
-                            </div>
-                            <div class="text">
-                                <h3 class="title"><a href="Event - Smash 2.0.html">Beyond Goodbye</a></h3>
-                                <a class="cat-link">Episode - 10</a>
+                                </div>
+            
+                            <div style="text-align: center;" class="text">
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/1ZvhjzQU8Js6DPBSiNOmY6?utm_source=generator&t=0">Beyond Goodbye</a></h3>
+                                <a class="cat-link">Varnam ilaa vaanile, vaanavil theetuvom</a>
                             </div>
                         </div>
                     </div>
@@ -190,9 +162,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Pongal pandigai.html">Ninaivu Iruka?</a></h3>
-                                <a class="cat-link">Episode - 9</a>
+                                <a class="cat-link">Andha naal nyabagam</a>
                             </div>
                         </div>
                     </div>
@@ -206,9 +178,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Yi Chennai Annual Day 2023.html">New Horizons</a></h3>
-                                <a class="cat-link">Episode - 8</a>
+                                <a class="cat-link">Grab a seat, hit play, and let's make opportunities</a>
                             </div>
                         </div>
                     </div>
@@ -240,9 +212,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Build And Connect.html">Adaikum Thaazh?</a></h3>
-                                <a class="cat-link">Episode - 7</a>
+                                <a class="cat-link">Anbirkum undo Adaikum Thaazh</a>
                             </div>
                         </div>
                     </div>
@@ -256,9 +228,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Instolutions 2.0.html">New Beginnings</a></h3>
-                                <a class="cat-link">Episode - 6</a>
+                                <a class="cat-link">A step ahead</a>
                             </div>
                         </div>
                     </div>
@@ -272,9 +244,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Lumos.html">Romanticising Who?</a></h3>
-                                <a class="cat-link">Episode - 5</a>
+                                <a class="cat-link">You do You</a>
                             </div>
                         </div>
                     </div>
@@ -288,9 +260,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Yuvaneta23.html">Let it Go</a></h3>
-                                <a class="cat-link">Episode - 4</a>
+                                <a class="cat-link">Iduvum Kadandhu Pogum</a>
                             </div>
                         </div>
                     </div>
@@ -304,9 +276,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Kick 1.0.html">Feeling Blessed</a></h3>
-                                <a class="cat-link">Episode - 3</a>
+                                <a class="cat-link">Karam Kodupom</a>
                             </div>
                         </div>
                     </div>
@@ -320,9 +292,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Chennai got talent 4.0.html">Little Things</a></h3>
-                                <a class="cat-link">Episode - 2</a>
+                                <a class="cat-link">Chinna vishayam dhan, aanalum thangam sir</a>
                             </div>
                         </div>
                     </div>
@@ -336,9 +308,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="text">
+                            <div  style="text-align: center;" class="text">
                                 <h3 class="title"><a href="Event - Adanga Maru.html">First Things First</a></h3>
-                                <a class="cat-link">Episode - 1</a>
+                                <a class="cat-link">Embark on an extraordinary storytelling voyage with Kutty Story</a>
                             </div>
                         </div>
                     </div>
