--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
                 </div>
             </div>
         </section><!--====== End Counter Section ======-->
-       <!--<section class="testimonial-area testimonial-area-v1 dark-blue-bg pattern-bg pt-130 pb-5">
+       <section class="testimonial-area testimonial-area-v1 dark-blue-bg pattern-bg pt-130 pb-5">
             <div class="shape-img wow fadeInRight animate-float-y"><span><img src="assets/images/testimonial/img-3.jpg" alt=""></span></div>
             <div class="container">
                 <div class="row">
@@ -1166,22 +1166,23 @@
                                 <div style="width:30%" class="img-holder mt-5 mb-50 wow fadeInLeft">
                                     <img src="assets/images/testimonial/img-1.jpg" alt="">
                                 </div>
-                                <div style="width:1%"></div>
+                                <div style="width:3.5%"></div>
                                 <div style="width:61%" class="">
                                     <i style="font-size:3.9vw;line-height:3.8vw;" class="flaticon-quotation"></i>
-                                    <h3 style="font-size:2.4vw;line-height:3.8vw">Sit amet consectetur adipiscing
-                                        elit sed do eiusmod temporincde
-                                        idunt ut labore et dolore magnas aliqua. Quis ipsum suspendissey 
-                                        sltrices gravida. Risus commodo verra maecenas lacusvel. </h3>
+                                    <h3 style="font-size:1.7vw;line-height:3.5vw">I have personally worked with the Yuva students from the Rajalakshmi Engineering College (REC) - Yuva club in multiple occassion during my leadership stint at Yi Chennai Chapter.  
+
+                                        The students are very methodical and disciplined. They take good care in planning and organizing the REC projects and events. They were also very forthcoming and proactive when it comes to Yuva participation in all the Yi Chennai led events. 
+                                        
+                                        We wish them a very happy journey in Yuva and learn leaps and bounds through our projects and initiatives, which is going to help them in achieving their desired career and future goal. </h3>
                                     <div style="position:relative" class="author-title">
-                                        <h4 style="font-size:2.1vw;line-height:3.9vw">Dustin A. McPherson</h4>
-                                        <p style="font-size:2.1vw;line-height:3.4vw" class="position">Senior Manager</p>
+                                        <h4 style="font-size:2.1vw;line-height:3.9vw">Mr. Pratheep Chandramohan</h4>
+                                        <p style="font-size:1.7vw;line-height:3.4vw" class="position">Immediate Past Chair - Yi Chennai Chapter</p>
                                     </div>
                                 </div>
                                 <div style="width:3%"><p></p></div>
                             </div>
                         </div>
-                        <div class="testimonial-item align-items-center">
+                        <!--<div class="testimonial-item align-items-center">
                             <div style="position:relative" class="testimonial-content row align-items-center">
                                 <div style="width:5%"></div>
                                 <div style="width:30%" class="img-holder mt-50 mb-50 wow fadeInLeft">
@@ -1243,7 +1244,7 @@
                                 </div>
                                 <div style="width:3%"></div>
                             </div>
-                        </div>
+                        </div>-->
                         <!--
                         <div class="testimonial-item">
                             <div class="testimonial-content row">
@@ -1262,11 +1263,11 @@
                                     <p class="position">Senior Manager</p>
                                 </div>
                             </div>
-                        </div> 
+                        </div>--> 
                     </div>
                 </div>
             </div>
-            </section>-->
+            </section>
         <!--====== End Testimonial Section ======-->
         <!--====== Start Instafeed Section ======-->
         <div class="container mt-60">
