--- a/Initiatives.html
+++ b/Initiatives.html
@@ -168,6 +168,38 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Smash 2.0.png" alt="Img">
+                                <a href="Event - Spread Smiles.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Spread Smiles.html">Spread Smiles</a></h3>
+                                <a class="cat-link">04/02/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Smash 2.0.png" alt="Img">
+                                <a href="Event - Retro Kadhaigal.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Retro Kadhaigal.html">Retro Kadhaigal</a></h3>
+                                <a class="cat-link">04/02/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Smash 2.0.png" alt="Img">
                                 <a href="Event - Smash 2.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
