--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Smash 2.0.png" alt="Img">
+                                <img src="assets/images/portfolio/Spread Smiles.jpg" alt="Img">
                                 <a href="Event - Spread Smiles.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -284,7 +284,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Smash 2.0.png" alt="Img">
+                                <img src="assets/images/portfolio/retro kadhaigal1.jpg" alt="Img">
                                 <a href="Event - Retro Kadhaigal.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
