--- a/Gallery.html
+++ b/Gallery.html
@@ -135,6 +135,22 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Spread Smiles/4.jpg" alt="">
+                                <a href="assets/images/Events/Spread Smiles/4.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Retro Kadhaigal/6.jpg" alt="">
+                                <a href="assets/images/Events/Retro Kadhaigal/6.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Smash 2.0/img 4.jpg" alt="">
                                 <a href="assets/images/Events/Smash 2.0/img 4.jpg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -177,6 +193,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Yuvaneta23/4.jpeg" alt="">
                                 <a href="assets/images/Events/Yuvaneta23/4.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Retro Kadhaigal/4.jpg" alt="">
+                                <a href="assets/images/Events/Retro Kadhaigal/4.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -233,6 +257,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/lumos/2.jpg" alt="">
                                 <a href="assets/images/Events/lumos/2.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Spread Smiles/5.jpg" alt="">
+                                <a href="assets/images/Events/Spread Smiles/5.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
