--- a/Event - Retro Kadhaigal.html
+++ b/Event - Retro Kadhaigal.html
@@ -179,7 +179,7 @@
                             </div>
                             <div class="text">
                                 <h4>Vertical</h4>
-                                <p>Sports</p>
+                                <p>Rural Initiative</p>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Players of Every Generation</p>
+                                <p>Senior Citizens of Pachaiyammal Trust</p>
                             </div>
                         </div>
                     </div>
