--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11 cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Spread Smiles.jpg" alt="Img">
@@ -281,7 +281,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/retro kadhaigal1.jpg" alt="Img">
@@ -1198,7 +1198,7 @@
                                 <div style="width:30%" class="img-holder mt-5 mb-50 wow fadeInLeft">
                                     <img src="assets/images/testimonial/img-1.jpg" alt="">
                                 </div>
-                                <div style="width:3.5%"></div>
+                                <div style="width:1%"></div>
                                 <div style="width:61%" class="">
                                     <i style="font-size:3.9vw;line-height:3.8vw;" class="flaticon-quotation"></i>
                                     <h3 style="font-size:1.7vw;line-height:3.5vw">I have personally worked with the Yuva students from the Rajalakshmi Engineering College (REC) - Yuva club in multiple occassion during my leadership stint at Yi Chennai Chapter.  
