--- a/podcast.html
+++ b/podcast.html
@@ -134,6 +134,22 @@
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <div class="container">
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
+                            <div class="img-holder">
+                                <img src="assets\images/podcast/11.jpg" alt="Img">
+                                <a href="https://open.spotify.com/embed/episode/2y9j6nfHmEwMaFaoLrGu87?utm_source=generator" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div  style="text-align: center;" class="text">
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/2y9j6nfHmEwMaFaoLrGu87?utm_source=generator">From plate to heart</a></h3>
+                                <p>Ready to tune in?</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
@@ -148,7 +164,7 @@
             
                             <div style="text-align: center;" class="text">
                                 <h3 class="title"><a href="https://open.spotify.com/embed/episode/1ZvhjzQU8Js6DPBSiNOmY6?utm_source=generator&t=0">Beyond Goodbye</a></h3>
-                                <a class="cat-link">Varnam ilaa vaanile, vaanavil theetuvom</a>
+                                <p>Varnam ilaa vaanile, vaanavil theetuvom</p>
                             </div>
                         </div>
                     </div>
@@ -156,15 +172,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/9.jpg" alt="Img">
-                                <a href="Event - Pongal pandigai.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/2tqSTJ7pSpe53XGyQYLORo?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Pongal pandigai.html">Ninaivu Iruka?</a></h3>
-                                <a class="cat-link">Andha naal nyabagam</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/2tqSTJ7pSpe53XGyQYLORo?utm_source=generator">Ninaivu Iruka?</a></h3>
+                                <p>Andha naal nyabagam</p>
                             </div>
                         </div>
                     </div>
@@ -172,15 +188,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/8.jpg" alt="Img">
-                                <a href="Event - Yi Chennai Annual Day 2023.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/58r4VNbBUKzYCm4c2DwYf7?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Yi Chennai Annual Day 2023.html">New Horizons</a></h3>
-                                <a class="cat-link">Grab a seat, hit play, and let's make opportunities</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/58r4VNbBUKzYCm4c2DwYf7?utm_source=generator">New Horizons</a></h3>
+                                <p>Grab a seat, hit play, and let's make opportunities</p>
                             </div>
                         </div>
                     </div>
@@ -206,15 +222,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/7.jpg" alt="Img">
-                                <a href="Event - Build And Connect.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/0H32KEBxt2qNzLQ7mJALfl?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Build And Connect.html">Adaikum Thaazh?</a></h3>
-                                <a class="cat-link">Anbirkum undo Adaikum Thaazh</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/0H32KEBxt2qNzLQ7mJALfl?utm_source=generator">Adaikum Thaazh?</a></h3>
+                                <p>Anbirkum undo Adaikum Thaazh</p>
                             </div>
                         </div>
                     </div>
@@ -222,15 +238,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/6.jpg" alt="Img">
-                                <a href="Event - Instolutions 2.0.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/2nctXLTX6m5hZsz9hWw6J6?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Instolutions 2.0.html">New Beginnings</a></h3>
-                                <a class="cat-link">A step ahead</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/2nctXLTX6m5hZsz9hWw6J6?utm_source=generator">New Beginnings</a></h3>
+                                <p>A step ahead</p>
                             </div>
                         </div>
                     </div>
@@ -238,15 +254,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".4s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/5.jpg" alt="Img">
-                                <a href="Event - Lumos.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/0xuQjiucipiMuXRhPoDWFv?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Lumos.html">Romanticising Who?</a></h3>
-                                <a class="cat-link">You do You</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/0xuQjiucipiMuXRhPoDWFv?utm_source=generator">Romanticising Who?</a></h3>
+                                <p>You do You</p>
                             </div>
                         </div>
                     </div>
@@ -254,15 +270,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets\images\portfolio\yuvaneta23.jpg" alt="Img">
-                                <a href="Event - Yuvaneta23.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/6MFm6qAnrZo7tRJ7uV3x43?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Yuvaneta23.html">Let it Go</a></h3>
-                                <a class="cat-link">Iduvum Kadandhu Pogum</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/6MFm6qAnrZo7tRJ7uV3x43?utm_source=generator">Let it Go</a></h3>
+                                <p>Iduvum Kadandhu Pogum</p>
                             </div>
                         </div>
                     </div>
@@ -270,15 +286,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/3.jpg" alt="Img">
-                                <a href="Event - Kick 1.0.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/1oYssksfp560W2aWaG1TDi?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Kick 1.0.html">Feeling Blessed</a></h3>
-                                <a class="cat-link">Karam Kodupom</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/1oYssksfp560W2aWaG1TDi?utm_source=generator">Feeling Blessed</a></h3>
+                                <p>Karam Kodupom</p>
                             </div>
                         </div>
                     </div>
@@ -286,15 +302,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".4s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/2.jpg" alt="Img">
-                                <a href="Event - Chennai got talent 4.0.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/6cyZwXS7VXGTmj1rjwrDFk?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Chennai got talent 4.0.html">Little Things</a></h3>
-                                <a class="cat-link">Chinna vishayam dhan, aanalum thangam sir</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/6cyZwXS7VXGTmj1rjwrDFk?utm_source=generator">Little Things</a></h3>
+                                <p>Chinna vishayam dhan, aanalum thangam sir</p>
                             </div>
                         </div>
                     </div>
@@ -302,15 +318,15 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/1.jpg" alt="Img">
-                                <a href="Event - Adanga Maru.html" class="portfolio-hover">
+                                <a href="https://open.spotify.com/embed/episode/5e3KX7MKTbmd22UQbP0o3N?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="Event - Adanga Maru.html">First Things First</a></h3>
-                                <a class="cat-link">Embark on an extraordinary storytelling voyage with Kutty Story</a>
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/5e3KX7MKTbmd22UQbP0o3N?utm_source=generator">First Things First</a></h3>
+                                <p>Embark on an extraordinary storytelling voyage with Kutty Story</p>
                             </div>
                         </div>
                     </div>
